--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="no-js">
 <head>
     <title>Winter Sports</title>
+    <link rel="shortcut icon" href="../images/favicon.ico" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +18,10 @@
 <body>
 <div class="container">
 
-    <section class="color-1">
+    <section>
+        <p>
+            <img src="../images/logo.png" align="center" width="30%" height="30%">
+        </p>
         <p>
             <button class="btn btn-1 btn-1e">Gallery</button>
             <button class="btn btn-1 btn-1e">Forum</button>
