--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,11 @@
             <img src="../images/logo.png" align="center" width="30%" height="30%">
         </p>
         <p>
+            <div class="registration">
+TODO: Registration/login
+            </div>
+        </p>
+        <p>
             <button class="btn btn-1 btn-1e">Gallery</button>
             <button class="btn btn-1 btn-1e">Forum</button>
             <button class="btn btn-1 btn-1e">News</button>
