Added Login button

--- a/html/index.html
+++ b/html/index.html
@@ -13,14 +13,22 @@
 
     <link rel="stylesheet" type="text/css" href="../css/default.css" />
     <link rel="stylesheet" type="text/css" href="../css/component.css" />
+    <link rel="stylesheet" type="text/css" href="../css/component2.css" />
+
     <script src="../js/modernizr.custom.js"></script>
+    <script src="../js/modernizr.custom2.js"></script>
 </head>
 <body>
+<div style="padding-top: 10pt">
+    <nav class="cl-effect-2">
+        <a href="#"><span data-hover="Login>>">Login</span></a>
+    </nav>
+</div>
 <div class="container">
 
     <section>
         <p>
-            <img src="../images/logo.png" align="center" width="30%" height="30%">
+            <img style="position: relative" src="../images/logo.png" align="center" width="30%" height="30%">
         </p>
         <p>
             <div class="registration">
