pisna mi za dnes :D

--- a/html/index.html
+++ b/html/index.html
@@ -28,13 +28,9 @@
 
     <section>
         <p>
-            <img style="position: relative" src="../images/logo.png" align="center" width="30%" height="30%">
+            <img style="position: relative" src="../images/logo.png" align="center" width="400px" height="400px">
         </p>
-        <p>
-            <div class="registration">
-TODO: Registration/login
-            </div>
-        </p>
+
         <p>
             <button class="btn btn-1 btn-1e">Gallery</button>
             <button class="btn btn-1 btn-1e">Forum</button>
