--- a/Blog.html
+++ b/Blog.html
@@ -10,7 +10,7 @@
 
  #Sidebar{
  background-color:#e6cfcf;
- height:12%;
+ height:15%;
  width:80% ;
  float: none;
  position: fixed; 
@@ -28,7 +28,7 @@
  } 
  
  #Searchbar{
- margin-left:50px;
+ margin-left:65%;
  } 
  
   #Buttons{
@@ -47,7 +47,7 @@
  width:80%;
  margin-left: auto;
     margin-right: auto;
- background-color: #0e41b4;}
+ background-color: #1b1464;}
  
  
  #pole{
@@ -106,10 +106,10 @@ form {
 <a href="New.html"><img src="button_newposts.png" onmouseover="this.src='button_newposts.png'" onmouseout="this.src='button_newposts.png'" height=70px; width=15%;></a>
 <a href="Gallery.html"><img src="button_gallery.png" onmouseover="this.src='button_gallery.png'" onmouseout="this.src='button_gallery.png'" height=70px; width=15%;></a>
 
-<input id = "Searchbar" align="right" id="pole" width=15% height = 15px; type="text" name="search" placeholder="Въведете ключова дума.."/>
+<input id = "Searchbar" align="top" id="pole" width=15% height = 15px; type="text" name="search" placeholder="Въведете ключова дума.."/>
 <input type="submit" value="ТЪРСИ"/>
 
-<a href="REG.html" id = "login" ><img src="Login.png" height=50px; width=4%;></a>
+<a href="REG.html" id = "login" ><img src="Login.png" align=top; height=50px; width=4%;></a>
  
 </div>
 </body>
