--- a/Blog.html
+++ b/Blog.html
@@ -10,7 +10,7 @@
 
  #Sidebar{
  background-color:#e6cfcf;
- height:15%;
+ height:13.5%;
  width:80% ;
  float: none;
  position: fixed; 
@@ -32,7 +32,7 @@
  } 
  
   #Buttons{
- margin-left:20px;
+ margin-left:30px;
  } 
  
  body { width:80%;
@@ -116,12 +116,12 @@ form {
 
 <article><div style="text-align:center" >
 <main>
-<br><br><br> <div style="text-align:center" ><b>???????</b></div><br><br>
+<br><br><br> <div style="text-align:center" ><b>Избери континент:</b></div><br><br>
 <img style="border:10px solid yellowgreen;" usemap="#worldmap" src="WorldMap.jpg" height=80%; width=80%;>
 <map name="worldmap">
   <area shape="rect" coords="150,280,330,450" href="SAmerica.html" alt="S.America">
   <area shape="rect" coords="350,230,500,400" href="Africa.html" alt="Africa">
-  <area shape="rect" coords="650,320,800,450" href="Australia.html" alt="Australia and Oceania">
+  <area shape="rect" coords="550,285,800,450" href="Australia.html" alt="Australia and Oceania">
   <area shape="rect" coords="500,60,820,300" href="Asia.html" alt="Asia">
   <area shape="rect" coords="350,120,500,230" href="Europe.html" alt="Europe">
   <area shape="rect" coords="30,60,350,280" href="NAmerica.html" alt="N.America">
