--- a/Blog.html
+++ b/Blog.html
@@ -1,104 +1,19 @@
 <!DOCTYPE html>
 <html>
+<link rel="script" type="text/js" href="blog.js">
+<link rel="stylesheet" type="text/css" href="blog.css">
 
-<head> 
-<title>Blogy</title>
+<head>
+ <link rel="stylesheet" type="text/css" href="blog.css">
+
+ <title>Blogy</title>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link href="Logo.png" rel="shortcut icon" type="image/x-icon">
 <meta charset="UTF-8">
-<style type="text/css">
-
- #Sidebar{
- background-color:#e6cfcf;
- height:13.5%;
- width:80% ;
- float: none;
- position: fixed; 
- display: inline ;
-}
-
-#logo{
- margin-left:0;
-  display: inline ;
- }
- 
- #login{
- margin-left:50px;
-  display: inline ;
- } 
- 
- #Searchbar{
- margin-left:65%;
- } 
- 
-  #Buttons{
- margin-left:30px;
- } 
- 
- body { width:80%;
- background-color: #e6cfcf;
- margin-left:auto;
- margin-right:auto;
- background-repeat: no-repeat;
- background-attachment: fixed;}
- 
- #article {
- height:800px;
- width:80%;
- margin-left: auto;
-    margin-right: auto;
- background-color: #1b1464;}
- 
- 
- #pole{
- border-top-right-radius:1em;
- border-top-left-radius:1em;
-  border-bottom-right-radius:1em;
- border-bottom-left-radius:1em;
- }
- 
- #button{background-color:#bbbbbb;}
- 
- article{
- background-color: #e5f3f8;
- width:100%;
- height: 800px;
- color:black;
- font-size: 200%;
- }
- 
-  footer{
-  color:black;
- }
- 
- #form1{
- size:200px;
-  color:black;
- }
- 
- #background{width:100%;}
- 
- 
- #foreground {
-    border-bottom-left-radius: 2em;
-	border-bottom-right-radius: 2em;
-	background-color: #e5f3f8;
- }
- 
-
-form {
-    float:right;
-	padding-top: 1.5%;
-}
-
-</style>
 </head> 
 
-<header>
-
-</header>
-
 <body background="Background.jpg">
+<link rel="stylesheet" type="text/css" href="blog.css">
 
 <div id="Sidebar">
 <a id="logo" target="_self" href="Blog.html"><img src="Logo.png" height=80px; width=155px;></a>
@@ -115,7 +30,9 @@ form {
 </body>
 
 <article><div style="text-align:center" >
-<main>
+ <link rel="stylesheet" type="text/css" href="blog.css">
+
+ <main>
 <br><br><br> <div style="text-align:center" ><b>Избери континент:</b></div><br><br>
 <img style="border:10px solid yellowgreen;" usemap="#worldmap" src="WorldMap.jpg" height=80%; width=80%;>
 <map name="worldmap">
@@ -132,19 +49,15 @@ form {
 <footer  id = "foreground"  style="text-align:center"><a href="Contact.html" style="color:black"><b>*  Контакти  *</b></a><br>	&copy Copyright ______ Team 2016</footer>
 
 <script>
+ function outputquestion(){var x,y,question,a,b,answer;
+  x=document.getElementById("form1");
+  y=x.elements["question"].value;
 
-function outputquestion(){
-var x,y,question,a,b,answer;
-x=document.getElementById("form1");
-y=x.elements["question"].value;
-
-if {document.getElementById("demo").innerHTML="You enetered this successfully";}
-else{document.getElementById("demo").innerHTML="You're wrong";
-}
-}
+  if() {document.getElementById("demo").innerHTML="You enetered this successfully";}
+  else{document.getElementById("demo").innerHTML="You're wrong";
+  }}
 
 </script>
-</main>
 
-</body>
+</main>
 </html>
